ORC-2053: Use Java `Set.of` instead of `Collections.emptySet`